# openvital

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  REVIEW.md  check_docs.py  plan.md  status_perf.rs
.claude/: ralph-loop.local.md
.claude/commands/: ci-fix.md  scope-check.md  wrapup.md
.githooks/: pre-commit
.github/jules-prompts/: bug-hunter.txt  dependency-health.txt  doc-consistency.txt  doc-sync.txt  helpers.sh  issue-autofix.txt  pr-review.txt  security-patrol.txt  test-coverage.txt  test-helpers.sh
.github/workflows/: ci.yml  jules-events.yml  jules-scheduled.yml  release-please.yml
docs/: development.md  openvital-spec.md
docs/adr/: 0001-rust-cli-with-sqlite.md  0002-four-layer-architecture.md  0003-bdd-tdd-development-workflow.md  0004-correlation-and-trend-analysis.md  0005-export-import-formats.md  0006-jules-automation-integration.md
docs/jules/: jules-integration-template.md  jules-openvital.md  jules-scheduled-tasks.md
docs/plans/: 2026-02-18-imperial-units-design.md  2026-02-18-imperial-units-plan.md  2026-02-18-ux-bugfix-design.md  2026-02-18-ux-bugfix-plan.md  2026-02-19-medication-implementation.md  2026-02-19-medication-management-design.md  (+3 more)
src/: cli.rs  lib.rs  main.rs
tests/: anomaly_test.rs  cli_integration.rs  context_test.rs  core_goal.rs  core_logging.rs  core_query.rs  correlation.rs  export_import.rs  goals.rs  med_core.rs  med_db.rs  med_integration.rs  models_test.rs  output_test.rs  report.rs  security_fixes.rs  security_test.rs  status_enhanced.rs  status_perf_test.rs  trend.rs  units_test.rs
(+39 files in other folders)
